Sort projects by priority and fix spacing styles

--- a/src/app/resume/components/projects/projects.component.scss
+++ b/src/app/resume/components/projects/projects.component.scss
@@ -23,12 +23,15 @@ h1{
     background-color: whitesmoke;
     margin-top: 10px;
     flex: 0 1 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     img {
         margin-top: 10px;
         width: 100%;
     }
-
+    
     h3 {
         font-family: 'Bear';
         text-align: center;
